--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ clap = "2.33.3"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
 dirs = "3.0.2"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
