--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,14 @@ name = "gitmgt"
 version = "0.1.0"
 authors = ["JoaoPedroPP <poloniponce@protonmail.ch>"]
 edition = "2018"
+repository = "https://github.com/JoaoPedroPP/Git-Management"
+readme = "README.md"
+license = "Apache-2.0"
+license-file = "LICENSE"
+keywords = ["cli", "git", "management"]
+categories = ["command-line-utilities", "development-tools", "config"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 
 [dependencies]
 clap = "2.33.3"
