--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
 dirs = "3.0.2"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+
+[dev-dependencies]
+assert_cmd = "2.0.2"
