--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     if: ${{ github.event.head_commit.message == ':rocket:' }}
     steps:
       - name: Login
-        run: cargo login ${{ secret. CARGO_REGISTRY_TOKEN }}
+        run: cargo login ${{ secrets.CARGO_REGISTRY_TOKEN }}
       - name: Publish
         run: cargo publish
 
