--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
     needs: compile
     if: ${{ github.event.head_commit.message == ':rocket:' }}
     steps:
+      - uses: actions/checkout@v2
       - name: Login
         run: cargo login ${{ secrets.CARGO_REGISTRY_TOKEN }}
       - name: Publish
